--- a/index.html
+++ b/index.html
@@ -597,8 +597,8 @@
                     <div class="url-body default">
 
 
-                        <a href="https://www.yuque.com/" target="_blank" data-id="" data-url="https://www.yuque.com/"
-                            class="card no-c mb-4" data-toggle="tooltip" data-placement="bottom" data-original-title="专业的云端知识库。">
+                        <a href="https://moodhappy.github.io/moodHappy.gitHub.io-nce/nce1/NCE1.html" target="_blank" data-id="" data-url="https://www.yuque.com/"
+                            class="card no-c mb-4" data-toggle="tooltip" data-placement="bottom" data-original-title="对话为主，明快上口">
 
                             <div class="card-body">
                                 <div class="url-content d-flex align-items-center">
@@ -612,7 +612,7 @@
                                     </div>
                                     <div class="url-info flex-fill">
                                         <div class="text-sm overflowClip_1">
-                                            <strong>语雀</strong>
+                                            <strong>NCE1</strong>
                                         </div>
                                         <p class="overflowClip_1 m-0 text-muted text-xs">专业的云端知识库。</p>
                                     </div>
