--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                                         <div class="text-sm overflowClip_1">
                                             <strong>NCE1</strong>
                                         </div>
-                                        <p class="overflowClip_1 m-0 text-muted text-xs">专业的云端知识库。</p>
+                                        <p class="overflowClip_1 m-0 text-muted text-xs">对话为主，明快上口；</p>
                                     </div>
                                 </div>
                             </div>
